--- a/style.css
+++ b/style.css
@@ -15,10 +15,46 @@ header {
     font-size: 1rem;
     color: #666;
 }
-h1{
+.h1{
     text-shadow: 0 0 20px #ff00c8, 0 0 40px #9600bc;
    color: white;
    text-align: center;
    padding-top: 100px;
    font-size: 80px;
 }
+ body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 20px;
+        }
+        .blog-section {
+            background: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .blog-section img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        .blog-section h1 {
+            margin-top: 0;
+            font-size: 2em;
+            color: #333;
+        }
+        .blog-section p {
+            font-size: 1em;
+            color: #666;
+            margin: 10px 0;
+            line-height: 1.8;
+        }
