--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ header {
    padding-top: 100px;
    font-size: 80px;
 }
+@media screen and (max-width: 900px) {
+    /* Exemple de style pour mobile */
+   .h1{
+    font-size: 50px;
+   }
+}
  body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
